# bigstringaf

./: .gitignore  CHANGES.md  README.md  README.md.orig  bigstringaf_simd.opam  dune-project
lib/: bigstringaf_simd.c  bigstringaf_simd.ml  bigstringaf_simd.mli  bigstringaf_simd_avx2.c  dune
lib/freestanding/: dune
lib/xen/: dune
lib_test/: dune
