(library
 (name        bigstringaf_simd_freestanding)
 (public_name bigstringaf_simd.freestanding)
 (optional)
 (libraries   bigarray-compat ocaml-freestanding)
 (c_names     bigstringaf_stubs)
 (c_flags     (:include cflags.sexp)))

(rule (copy# ../bigstringaf_stubs.c bigstringaf_stubs.c))

(rule (with-stdout-to cflags.sexp (run ./cflags.sh)))
